--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,21 +27,21 @@ RUN if [ "${USE_BACKUP}" = "yes" ]; then \
 RUN sed -i 's/dl-cdn.alpinelinux.org/'${LINK_APK_REPO}'/g' /etc/apk/repositories
 
 # build requirements
-RUN apk add bash wget cmake gcc g++ jq autoconf git libstdc++ linux-headers make m4 libgcc binutils ncurses
+RUN apk add bash wget cmake gcc g++ jq autoconf git libstdc++ linux-headers make m4 libgcc binutils ncurses > /dev/null
 # php zlib dependencies
-RUN apk add zlib-dev zlib-static
+RUN apk add zlib-dev zlib-static > /dev/null
 # php mbstring dependencies
-RUN apk add oniguruma-dev
+RUN apk add oniguruma-dev > /dev/null
 # php openssl dependencies
-RUN apk add openssl-libs-static openssl-dev openssl
+RUN apk add openssl-libs-static openssl-dev openssl > /dev/null
 # php gd dependencies
-RUN apk add libpng-dev libpng-static
+RUN apk add libpng-dev libpng-static > /dev/null
 # curl c-ares dependencies
-RUN apk add c-ares-static c-ares-dev
+RUN apk add c-ares-static c-ares-dev > /dev/null
 # php event dependencies
-RUN apk add libevent libevent-dev libevent-static
+RUN apk add libevent libevent-dev libevent-static > /dev/null
 # php sqlite3 dependencies
-RUN apk add sqlite sqlite-dev sqlite-libs sqlite-static
+RUN apk add sqlite sqlite-dev sqlite-libs sqlite-static > /dev/null
 
 RUN mkdir /app
 
@@ -54,16 +54,18 @@ COPY config.json /app/
 
 RUN chmod +x /app/download.sh
 
-RUN ./download.sh swoole ${USE_BACKUP} && \
-    ./download.sh inotify ${USE_BACKUP} && \
-    ./download.sh mongodb ${USE_BACKUP} && \
-    ./download.sh event ${USE_BACKUP} && \
-    ./download.sh redis ${USE_BACKUP} && \
-    ./download.sh libxml2 ${USE_BACKUP} && \
-    ./download.sh liblzma ${USE_BACKUP} && \
-    ./download.sh curl ${USE_BACKUP}
+RUN echo "Downloading Extensions ..."
+RUN ./download.sh swoole ${USE_BACKUP} > /dev/null && \
+    ./download.sh inotify ${USE_BACKUP} > /dev/null && \
+    ./download.sh mongodb ${USE_BACKUP} > /dev/null && \
+    ./download.sh event ${USE_BACKUP} > /dev/null && \
+    ./download.sh redis ${USE_BACKUP} > /dev/null && \
+    ./download.sh libxml2 ${USE_BACKUP} > /dev/null && \
+    ./download.sh liblzma ${USE_BACKUP} > /dev/null && \
+    ./download.sh curl ${USE_BACKUP} > /dev/null 
 
-RUN ./download.sh php ${USE_BACKUP} ${VER_PHP}
+RUN echo "Downloading PHP ${VER_PHP} ..."
+RUN ./download.sh php ${USE_BACKUP} ${VER_PHP} > /dev/null
 
 COPY extensions.txt /app/
 COPY check-extensions.sh /app/
@@ -72,6 +74,8 @@ COPY compile-php.sh /app/
 RUN chmod +x ./check-extensions.sh && \
     chmod +x ./compile-php.sh
 
-RUN ./check-extensions.sh check_before_configure
+RUN echo "Checking and Compiling Dependencies ..."
+RUN ./check-extensions.sh check_before_configure > /dev/null
 
-RUN ./compile-php.sh ${VER_PHP}
+RUN echo "Compiling PHP ..."
+RUN ./compile-php.sh ${VER_PHP} > /dev/null 2>&1
