Update build-php action trigger events

--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -3,8 +3,9 @@ name: Build PHP
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    paths:
+      - ".github/workflows/**.yml"
+      - "docker/**"
 
 jobs:
   integration:
