Update to 1.6.0 version (dialog selection and multiarch micro)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,31 +6,28 @@ ENV SCRIPT_VERSION=1.5.0
 # Download address uses backup address 
 
 ARG USE_BACKUP_ADDRESS
-ARG COMPILE_PHP_VERSION
-ARG COMPILE_MICRO
 
 # (if downloading slowly, consider set it to yes)
 ENV USE_BACKUP="${USE_BACKUP_ADDRESS}"
 
-# Version of some manually-installed package
-ENV VER_PHP="${COMPILE_PHP_VERSION}"
-
-ENV ENABLE_MICRO="${COMPILE_MICRO}"
 
 # APK repositories mirror address, if u r not in China, consider set USE_BACKUP=yes to boost
 ENV LINK_APK_REPO='mirrors.ustc.edu.cn'
 ENV LINK_APK_REPO_BAK='dl-cdn.alpinelinux.org'
 
-RUN if [ "${USE_BACKUP}" = "no" ]; then \
-        echo "Using backup address..." && sleep 3s; \
-        sed -i 's/dl-cdn.alpinelinux.org/'${LINK_APK_REPO}'/g' /etc/apk/repositories ; \
-    else \
-        echo "Using original address..." && sleep 3s; \
+RUN if [ "${USE_BACKUP}" = "" ]; then \
+        export USE_BACKUP="no" ; \
     fi
 
+RUN if [ "${USE_BACKUP}" = "yes" ]; then \
+        echo "Using backup original address..." ; \
+    else \
+        echo "Using mirror address..." && \
+        sed -i 's/dl-cdn.alpinelinux.org/'${LINK_APK_REPO}'/g' /etc/apk/repositories ; \
+    fi
 
 # build requirements
-RUN apk add bash file wget cmake gcc g++ jq autoconf git libstdc++ linux-headers make m4 libgcc binutils ncurses > /dev/null
+RUN apk add bash file wget cmake gcc g++ jq autoconf git libstdc++ linux-headers make m4 libgcc binutils ncurses dialog > /dev/null
 # php zlib dependencies
 RUN apk add zlib-dev zlib-static > /dev/null
 # php mbstring dependencies
@@ -54,42 +51,20 @@ RUN mkdir /app
 
 WORKDIR /app
 
-COPY ac_override_1 /app/
-COPY ac_override_2 /app/
-COPY download.sh /app/
-COPY config.json /app/
+COPY ./* /app/
 
-RUN chmod +x /app/download.sh
+RUN chmod +x /app/*.sh
 
-RUN echo "Downloading Extensions ..."
-RUN ./download.sh swoole ${USE_BACKUP} > /dev/null && \
-    ./download.sh inotify ${USE_BACKUP} > /dev/null && \
-    ./download.sh mongodb ${USE_BACKUP} > /dev/null && \
-    ./download.sh event ${USE_BACKUP} > /dev/null && \
-    ./download.sh redis ${USE_BACKUP} > /dev/null && \
-    ./download.sh libxml2 ${USE_BACKUP} > /dev/null && \
-    ./download.sh xz ${USE_BACKUP} > /dev/null && \
-    ./download.sh curl ${USE_BACKUP} > /dev/null && \
-    ./download.sh libzip ${USE_BACKUP} > /dev/null
+RUN ./download.sh swoole ${USE_BACKUP} && \
+    ./download.sh inotify ${USE_BACKUP} && \
+    ./download.sh mongodb ${USE_BACKUP} && \
+    ./download.sh event ${USE_BACKUP} && \
+    ./download.sh redis ${USE_BACKUP} && \
+    ./download.sh libxml2 ${USE_BACKUP} && \
+    ./download.sh xz ${USE_BACKUP} && \
+    ./download.sh curl ${USE_BACKUP} && \
+    ./download.sh libzip ${USE_BACKUP} && \
+    ./download-git.sh dixyes/phpmicro micro ${USE_BACKUP}
 
-RUN echo "Downloading PHP ${VER_PHP} ..."
-RUN ./download.sh php ${USE_BACKUP} ${VER_PHP} > /dev/null
-
-COPY extensions.txt /app/
-COPY check-extensions.sh /app/
-COPY compile-php.sh /app/
-COPY compile-micro.sh /app/
-
-RUN chmod +x ./check-extensions.sh && \
-    chmod +x ./compile-php.sh && \
-    chmod +x ./compile-micro.sh
-
-RUN echo "Checking and Compiling Dependencies ..."
-RUN ./check-extensions.sh check_before_configure > /dev/null
-
-RUN echo "Compiling PHP ..."
-RUN if [ "${ENABLE_MICRO}" = "yes" ]; then \
-        ./compile-micro.sh ${VER_PHP} ${USE_BACKUP} ; \
-    else \
-        ./compile-php.sh ${VER_PHP} > /dev/null 2>&1 ; \
-    fi
+RUN ./compile-deps.sh
+RUN echo -e "#!/usr/bin/env bash\n/app/compile-php.sh \$@" > /bin/build-php && chmod +x /bin/build-php
